src/test/testFiles/invalid/semanticErrors/invalidForLoopRange.manimdsl
let x = 0;
let y = 'a';
for i in range(x, y) {
    x = x + i;
}
